fixed smelly code
well it still really stinks with naming however its a slight stink, not a severe one. :D